--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,9 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Homekkhhjjjjkjk</ion-title>
-  </ion-navbar>
-</ion-header>
+<ion-content padding class="card-background-image">
+<img src="assets/imgs/min.jpg" alt="min333"> 
+</ion-content>
 
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    *-*
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+<ion-content class="card-background">
+  <ion-card>
+    <img src="assets/imgs/cat.jpg" alt="cat">
+  </ion-card>
 </ion-content>
